--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -14,39 +14,43 @@
 
         <nav>
             <a href="#sobre">Sobre mim</a>
-            <a href="#Habilidades">Habilidades</a>
-            <a href="#Projetos">Projetos</a>
-            <a href="#Contato">Contato</a>
+            <a href="#habilidades">Habilidades</a>
+            <a href="#projetos">Projetos</a>
+            <a href="#contato">Contato</a>
         </nav>
     </header>
 
     <main>
         <section id="hero">
-            <p>Um estudante de Sistemas de Informação pela Universidade Federal de Uberlândia (UFU), curioso e interessado em aprender novas coisas e entender
-                <br> o funcionamento do mundo ao seu redor. Desde pequeno, sempre fui afecionado por tecnologia e computadores, o que me levou a escolher essa área para a minha carreira.
+            <p>Um estudante de Sistemas de Informação pela Universidade Federal de Uberlândia (UFU), curioso e
+                interessado em aprender novas coisas e entender
+                <br> o funcionamento do mundo ao seu redor. Desde pequeno, sempre fui afecionado por tecnologia e
+                computadores, o que me levou a escolher essa área para a minha carreira.
             </p>
             <p>
-                Atualmente, estou focado em me tornar um desenvolvedor web full stack, buscando adquirir conhecimentos em diversas tecnologias e linguagens de programação.
+                Atualmente, estou focado em me tornar um desenvolvedor web full stack, buscando adquirir conhecimentos
+                em diversas tecnologias e linguagens de programação.
             </p>
         </section>
 
         <section id="sobre">
             <h2>Sobre mim</h2>
-            <p>Meu nome é <strong>Gabriel Faria de Angelis</strong>, tenho 22 anos e estou cursando o 6° período de Sistemas de Informação na UFU.
-                <br> No curso de SI, já passei por matérias que me garantem uma base muito sólida em:
-                <ul>
-                    <li>Lógica de Programação</li>
-                    <li>Algoritmos</li>
-                    <li>Estrutura de Dados</li>
-                    <li>Banco de Dados</li>
-                    <li>Arquitetura e Organização de Computadores</li>
-                    <li>Desenvolvimento Mobile - Kotlin</li>
-                </ul>
-            </p>
-            <p>Além disso, estou praticando desenvolvimento web com HTML, CSS e JavaScript, além de frameworks como React e Node.js. de forma autodidata!</p>
+            <p>Meu nome é <strong>Gabriel Faria de Angelis</strong>, tenho 22 anos e estou cursando o 6° período de
+                Sistemas de Informação na UFU.</p>
+            <p>No curso de SI, já passei por matérias que me garantem uma base muito sólida em:</p>
+            <ul>
+                <li>Lógica de Programação</li>
+                <li>Algoritmos</li>
+                <li>Estrutura de Dados</li>
+                <li>Banco de Dados</li>
+                <li>Arquitetura e Organização de Computadores</li>
+                <li>Desenvolvimento Mobile - Kotlin</li>
+            </ul>
+            <p>Além disso, estou praticando desenvolvimento web com HTML, CSS e JavaScript, além de frameworks como
+                React e Node.js, de forma autodidata!</p>
         </section>
 
-        <section id="Habilidades">
+        <section id="habilidades">
             <h2>Habilidades</h2>
             <p>Minhas habilidades técnicas incluem:</p>
             <ul>
@@ -54,55 +58,61 @@
                 <li>Inglês Fluente - nível C1, com certificado FCE de Cambridge</li>
                 <li>Conhecimento vasto em VBA, linguagem de automação do Excel</li>
                 <li>Python básico, aprendido trabalhando na SOTREQ e automatizando processos e analisando dados</li>
-                <li>Comunicação eficiente e facilidade em passar conhecimento - adquiridos quando fui professor de Inglês</li>
+                <li>Comunicação eficiente e facilidade em passar conhecimento - adquiridos quando fui professor de
+                    Inglês</li>
             </ul>
-            <p>Além dessas habilidades técnicas, possuo um grande interesse em aprender coisas novas e muita facilidade para adaptar novos ambientes e resolver problemas.</p>
+            <p>Além dessas habilidades técnicas, possuo um grande interesse em aprender coisas novas e muita facilidade
+                para adaptar novos ambientes e resolver problemas.</p>
         </section>
 
-        <section id="Projetos">
+        <section id="projetos">
             <h2>Projetos</h2>
-            <p>Aqui irei publicar todos os meus projetos a fim de conseguir um emprego como WebDev!
-            <br>Estou praticando a partir do <strong>AntiGravity</strong>, com um roadmap que cobre o <em>essencial para ser um desenvolvedor.</em>
-            </p>
+            <p>Aqui irei publicar todos os meus projetos a fim de conseguir um emprego como WebDev!</p>
+            <p>Estou praticando a partir do <strong>AntiGravity</strong>, com um roadmap que cobre o <em>essencial para
+                    ser um desenvolvedor.</em></p>
+
             <article>
-                <h3>Projeto 1 - Site de Vendas</h3>
-                <a href="https://viluanma.netlify.app" target="_blank">Clique para ser redirecionado ao meu site de vendas!</a>
+                <h3>Projeto 1 - VILUANMA (Site de Vendas)</h3>
+                <a href="https://viluanma.netlify.app" target="_blank">Clique para ser redirecionado ao meu site de
+                    vendas!</a>
                 <p>O site acima vende:</p>
                 <ul>
                     <li>Bolsas de Crochê</li>
                     <li>Pratas 925</li>
                 </ul>
-                <p>O site foi desenvolvido utilizando HTML, CSS e JavaScript, com foco em responsividade e experiência do usuário.</p>
+                <p>O site foi desenvolvido utilizando HTML, CSS e JavaScript, com foco em responsividade e experiência
+                    do usuário.</p>
             </article>
+
             <article>
-                <h3>Projeto 1 - Site de Vendas</h3>
-                <a href="https://viluanma.netlify.app" target="_blank">Clique para ser redirecionado ao meu site de vendas!</a>
-                <p>O site acima vende:</p>
-                <ul>
-                    <li>Bolsas de Crochê</li>
-                    <li>Pratas 925</li>
-                </ul>
-                <p>O site foi desenvolvido utilizando HTML, CSS e JavaScript, com foco em responsividade e experiência do usuário.</p>
                 <h3>Projeto 2 - Verificador de Disponibilidade</h3>
-                <p>Projeto desenvolvido em VBA com integração com o SAP, utilizado na SOTREQ. O projeto foi feito com o intuito de automatizar o processo de verificação de disponibilidade de peças vendidas pela SOTREQ. </p>
-                <p> É uma planilha do Excel, em que o usuário insere o código da peça e os scripts criados em VBA são executados para verificar a disponibilidade da peça no SAP.
-                    <br> A principal vantagem desse projeto é a economia de tempo, já que o processo manual levava em média 5 minutos por peça, enquanto o processo automatizado leva apenas alguns segundos.
-                    <br> Além disso, a transação do SAP usada nesse projeto <strong>(YLP_PARTS)</strong> nunca havia sido integrada com o Excel antes, o que torna esse projeto inovador dentro da empresa.
+                <p>Projeto desenvolvido em VBA com integração com o SAP, utilizado na SOTREQ. O projeto foi feito com o
+                    intuito de automatizar o processo de verificação de disponibilidade de peças vendidas pela SOTREQ.
                 </p>
+                <p>É uma planilha do Excel, em que o usuário insere o código da peça e os scripts criados em VBA são
+                    executados para verificar a disponibilidade da peça no SAP.</p>
+                <p>A principal vantagem desse projeto é a economia de tempo, já que o processo manual levava em média 5
+                    minutos por peça, enquanto o processo automatizado leva apenas alguns segundos.</p>
+                <p>Além disso, a transação do SAP usada nesse projeto <strong>(YLP_PARTS)</strong> nunca havia sido
+                    integrada com o Excel antes, o que torna esse projeto inovador dentro da empresa.</p>
             </article>
         </section>
 
         <section id="contato">
             <h2>Contato</h2>
-            <p>Se quiser entrar em contato comigo, pode me enviar um e-mail para <a href="mailto:gfaria.deangelis@gmail.com">gfaria.deangelis@gmail.com</a></p>
-            <p>Também posso ser encontrado no LinkedIn: <a href="https://www.linkedin.com/in/gabriel-de-angelis" target="_blank">Gabriel de Angelis</a></p>
+            <p>Se quiser entrar em contato comigo, pode me enviar um e-mail para <a
+                    href="mailto:gfaria.deangelis@gmail.com">gfaria.deangelis@gmail.com</a></p>
+            <p>Também posso ser encontrado no LinkedIn: <a href="https://www.linkedin.com/in/gabriel-de-angelis"
+                    target="_blank">Gabriel de Angelis</a></p>
             <p>Ou no GitHub: <a href="https://github.com/GabrielFDA7" target="_blank">GabrielFDA7</a></p>
         </section>
 
     </main>
+
     <footer>
-        <p>&copy; Gabriel de Angelis - 2026.
-        <br>Todos os direitos reservados.</p>
+        <p>&copy; Gabriel de Angelis - 2026.</p>
+        <p>Todos os direitos reservados.</p>
+    </footer>
 
 </body>
 
