Adicionado os primeiros passos no css. Header, h1 e navbar.

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -5,12 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Espaço de treino</title>
+
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <header>
         <h1> Gabriel de Angelis - Meu Portfólio </h1>
-        <p> O início do Desenvolvedor Web mais aplicado do Brasil</p>
+        <p id="introdução"> O início do Desenvolvedor Web mais aplicado do Brasil</p>
 
         <nav>
             <a href="#sobre">Sobre mim</a>
