Aula 04 - Concluida. Display flex implementado.

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -71,32 +71,33 @@
             <p>Aqui irei publicar todos os meus projetos a fim de conseguir um emprego como WebDev!</p>
             <p>Estou praticando a partir do <strong>AntiGravity</strong>, com um roadmap que cobre o <em>essencial para
                     ser um desenvolvedor.</em></p>
+            <div class="projetos-container">
+                <article>
+                    <h3>Projeto 1 - VILUANMA (Site de Vendas)</h3>
+                    <a href="https://viluanma.netlify.app" target="_blank">Clique para ser redirecionado ao meu site de
+                        vendas!</a>
+                    <p>O site acima vende:</p>
+                    <ul>
+                        <li>Bolsas de Crochê</li>
+                        <li>Pratas 925</li>
+                    </ul>
+                    <p>O site foi desenvolvido utilizando HTML, CSS e JavaScript, com foco em responsividade e experiência
+                        do usuário.</p>
+                </article>
 
-            <article>
-                <h3>Projeto 1 - VILUANMA (Site de Vendas)</h3>
-                <a href="https://viluanma.netlify.app" target="_blank">Clique para ser redirecionado ao meu site de
-                    vendas!</a>
-                <p>O site acima vende:</p>
-                <ul>
-                    <li>Bolsas de Crochê</li>
-                    <li>Pratas 925</li>
-                </ul>
-                <p>O site foi desenvolvido utilizando HTML, CSS e JavaScript, com foco em responsividade e experiência
-                    do usuário.</p>
-            </article>
-
-            <article>
-                <h3>Projeto 2 - Verificador de Disponibilidade</h3>
-                <p>Projeto desenvolvido em VBA com integração com o SAP, utilizado na SOTREQ. O projeto foi feito com o
-                    intuito de automatizar o processo de verificação de disponibilidade de peças vendidas pela SOTREQ.
-                </p>
-                <p>É uma planilha do Excel, em que o usuário insere o código da peça e os scripts criados em VBA são
-                    executados para verificar a disponibilidade da peça no SAP.</p>
-                <p>A principal vantagem desse projeto é a economia de tempo, já que o processo manual levava em média 5
-                    minutos por peça, enquanto o processo automatizado leva apenas alguns segundos.</p>
-                <p>Além disso, a transação do SAP usada nesse projeto <strong>(YLP_PARTS)</strong> nunca havia sido
-                    integrada com o Excel antes, o que torna esse projeto inovador dentro da empresa.</p>
-            </article>
+                <article>
+                    <h3>Projeto 2 - Verificador de Disponibilidade</h3>
+                    <p>Projeto desenvolvido em VBA com integração com o SAP, utilizado na SOTREQ. O projeto foi feito com o
+                        intuito de automatizar o processo de verificação de disponibilidade de peças vendidas pela SOTREQ.
+                    </p>
+                    <p>É uma planilha do Excel, em que o usuário insere o código da peça e os scripts criados em VBA são
+                        executados para verificar a disponibilidade da peça no SAP.</p>
+                    <p>A principal vantagem desse projeto é a economia de tempo, já que o processo manual levava em média 5
+                        minutos por peça, enquanto o processo automatizado leva apenas alguns segundos.</p>
+                    <p>Além disso, a transação do SAP usada nesse projeto <strong>(YLP_PARTS)</strong> nunca havia sido
+                        integrada com o Excel antes, o que torna esse projeto inovador dentro da empresa.</p>
+                </article>
+            </div>
         </section>
 
         <section id="contato">
