--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -60,8 +60,10 @@
                         <li>Pacote Office completo, com grande foco em Excel</li>
                         <li>Inglês Fluente - nível C1, com certificado FCE de Cambridge</li>
                         <li>Conhecimento vasto em VBA, linguagem de automação do Excel</li>
-                        <li>Python básico, aprendido trabalhando na SOTREQ e automatizando processos e analisando dados</li>
-                        <li>Comunicação eficiente e facilidade em passar conhecimento - adquiridos quando fui professor de
+                        <li>Python básico, aprendido trabalhando na SOTREQ e automatizando processos e analisando dados
+                        </li>
+                        <li>Comunicação eficiente e facilidade em passar conhecimento - adquiridos quando fui professor
+                            de
                             Inglês</li>
                     </ul>
                 </div>
@@ -150,6 +152,7 @@
         <p>Todos os direitos reservados.</p>
     </footer>
 
+    <script src="script.js"></script>
 </body>
 
 </html>
