Aula 08 - Em andamento.
Cards interativos adicionados.

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -7,12 +7,13 @@
     <title>Espaço de treino</title>
 
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="data:,">
 </head>
 
 <body>
     <header>
         <h1> Gabriel de Angelis - Meu Portfólio </h1>
-        <p id="introdução"> O início do Desenvolvedor Web mais aplicado do Brasil</p>
+        <p id="introducao"> O início do Desenvolvedor Web mais aplicado do Brasil</p>
 
         <nav>
             <a href="#sobre">Sobre mim</a>
@@ -148,7 +149,7 @@
     </main>
 
     <footer>
-        <p>&copy; Gabriel de Angelis - 2026.</p>
+        <p id="copyright">&copy; Gabriel de Angelis - .</p>
         <p>Todos os direitos reservados.</p>
     </footer>
 
