Aula 08 - Concluída. Pedi para o agente criar uma pasta de treino para eu fixar o conteúdo aprendido nas aulas 07 e 08.

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -149,7 +149,7 @@
     </main>
 
     <footer>
-        <p id="copyright">&copy; Gabriel de Angelis - .</p>
+        <p id="copyright">&copy; Gabriel de Angelis - </p>
         <p>Todos os direitos reservados.</p>
     </footer>
 
