Desafios - Em andamento. Concluido até o desafio 11.

--- a/treino/index.html
+++ b/treino/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Treino de Web Development - Gabriel</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="data:,">
 </head>
 
 <body>
@@ -375,6 +376,7 @@ console.log(`Olá, ${nome}! Você tem ${idade} anos.`);</code></pre>
         <p>📚 Material de Estudo - Web Development</p>
         <p id="ano-footer"></p>
         <a href="#topo">⬆️ Voltar ao Topo</a>
+        <button id="btn-tema">Modo escuro</button>
     </footer>
 
     <script src="script.js"></script>
