Desafio 13 - Em implementação.

--- a/treino/index.html
+++ b/treino/index.html
@@ -363,10 +363,24 @@ botao.addEventListener("click", () => {
             <article class="card">
                 <h3>Template Literals</h3>
                 <pre><code>const nome = "Gabriel";
-const idade = 22;
+                    const idade = 22;
 
-// Use crase ` e ${variável}
-console.log(`Olá, ${nome}! Você tem ${idade} anos.`);</code></pre>
+                    // Use crase ` e ${variável}
+                    console.log(`Olá, ${nome}! Você tem ${idade} anos.`);</code></pre>
+            </article>
+
+            <article class="card">
+                <h3>Tarefas:</h3>
+                <div id="lista-tarefas">
+                    <ul>
+                        <li><code>String</code> - Texto: <code>"Olá"</code></li>
+                        <li><code>Number</code> - Número: <code>42</code></li>
+                        <li><code>Boolean</code> - Verdadeiro/Falso: <code>true</code></li>
+                        <li><code>Array</code> - Lista: <code>["HTML", "CSS", "JS"]</code></li>
+                        <li><code>Object</code> - Objeto: <code>{ nome: "Gabriel", idade: 22 }</code></li>
+                    </ul>  
+                </div>
+
             </article>
         </section>
     </main>
